// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Notification component > renders error type notification 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--error"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-error ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm0 76c-205.4 0-372 166.6-372 372s166.6 372 372 372 372-166.6 372-372-166.6-372-372-372zm128.01 198.83c.03 0 .05.01.09.06l45.02 45.01a.2.2 0 01.05.09.12.12 0 010 .07c0 .02-.01.04-.05.08L557.25 512l127.87 127.86a.27.27 0 01.05.06v.02a.12.12 0 010 .07c0 .03-.01.05-.05.09l-45.02 45.02a.2.2 0 01-.09.05.12.12 0 01-.07 0c-.02 0-.04-.01-.08-.05L512 557.25 384.14 685.12c-.04.04-.06.05-.08.05a.12.12 0 01-.07 0c-.03 0-.05-.01-.09-.05l-45.02-45.02a.2.2 0 01-.05-.09.12.12 0 010-.07c0-.02.01-.04.06-.08L466.75 512 338.88 384.14a.27.27 0 01-.05-.06l-.01-.02a.12.12 0 010-.07c0-.03.01-.05.05-.09l45.02-45.02a.2.2 0 01.09-.05.12.12 0 01.07 0c.02 0 .04.01.08.06L512 466.75l127.86-127.86c.04-.05.06-.06.08-.06a.12.12 0 01.07 0z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders info type notification 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders notification with description 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders notification with title and description 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-message"
        >
          <span
            class="font-bold text-sm tracking-tight"
          >
            Test Title
          </span>
        </div>
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test Description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders success type notification 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--success"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-success ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="check-circle"
        class="anticon anticon-check-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="check-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M699 353h-46.9c-10.2 0-19.9 4.9-25.9 13.3L469 584.3l-71.2-98.8c-6-8.3-15.6-13.3-25.9-13.3H325c-6.5 0-10.3 7.4-6.5 12.7l124.6 172.8a31.8 31.8 0 0051.7 0l210.6-292c3.9-5.3.1-12.7-6.4-12.7z"
          />
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders warning type notification 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--warning"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-warning ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="exclamation-circle"
        class="anticon anticon-exclamation-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="exclamation-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 688a48 48 0 1096 0 48 48 0 10-96 0zm24-112h48c4.4 0 8-3.6 8-8V296c0-4.4-3.6-8-8-8h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders with custom width as number 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 300px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders with custom width as string 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 500px;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders with default width (100%) 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Test notification description
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders with long description 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Notification component > renders without title 1`] = `
<div>
  <div
    class="mb-2 animate-slideInRight itsa-notification itsa-notification--info"
    style="width: 100%;"
  >
    <div
      class="ant-alert ant-alert-info ant-alert-with-description w-full !py-1.5 !px-2 [&_.ant-alert-icon]:!mt-[2px] [&_.ant-alert-icon]:!text-[18px] [&_.ant-alert-message]:!mb-1 css-dev-only-do-not-override-mncuj7"
      data-show="true"
      role="alert"
    >
      <span
        aria-label="info-circle"
        class="anticon anticon-info-circle ant-alert-icon"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="info-circle"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
          />
          <path
            d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
          />
        </svg>
      </span>
      <div
        class="ant-alert-content"
      >
        <div
          class="ant-alert-description"
        >
          <span
            class="text-sm text-gray-600 leading-tight"
          >
            Only description here
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
